--- a/.classpath
+++ b/.classpath
@@ -1,15 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
-	<classpathentry kind="lib" path="C:/Users/Undead/Desktop/Prog/git/JGame/libs/basicplayer3.0.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Undead/Desktop/Prog/git/JGame/libs/lib/commons-logging-api.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Undead/Desktop/Prog/git/JGame/libs/lib/jl1.0.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Undead/Desktop/Prog/git/JGame/libs/lib/jogg-0.0.7.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Undead/Desktop/Prog/git/JGame/libs/lib/jorbis-0.0.15.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Undead/Desktop/Prog/git/JGame/libs/lib/jspeex0.9.7.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Undead/Desktop/Prog/git/JGame/libs/lib/mp3spi1.9.4.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Undead/Desktop/Prog/git/JGame/libs/lib/tritonus_share.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Undead/Desktop/Prog/git/JGame/libs/lib/vorbisspi1.0.2.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/david/OneDrive/Ambiente de Trabalho/Engine/JGame/JGame/libs/basicplayer3.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/david/OneDrive/Ambiente de Trabalho/Engine/JGame/JGame/libs/lib/commons-logging-api.jar"/>
+	<classpathentry kind="lib" path="C:/Users/david/OneDrive/Ambiente de Trabalho/Engine/JGame/JGame/libs/lib/jl1.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/david/OneDrive/Ambiente de Trabalho/Engine/JGame/JGame/libs/lib/jogg-0.0.7.jar"/>
+	<classpathentry kind="lib" path="C:/Users/david/OneDrive/Ambiente de Trabalho/Engine/JGame/JGame/libs/lib/jorbis-0.0.15.jar"/>
+	<classpathentry kind="lib" path="C:/Users/david/OneDrive/Ambiente de Trabalho/Engine/JGame/JGame/libs/lib/jspeex0.9.7.jar"/>
+	<classpathentry kind="lib" path="C:/Users/david/OneDrive/Ambiente de Trabalho/Engine/JGame/JGame/libs/lib/mp3spi1.9.4.jar"/>
+	<classpathentry kind="lib" path="C:/Users/david/OneDrive/Ambiente de Trabalho/Engine/JGame/JGame/libs/lib/tritonus_share.jar"/>
+	<classpathentry kind="lib" path="C:/Users/david/OneDrive/Ambiente de Trabalho/Engine/JGame/JGame/libs/lib/vorbisspi1.0.2.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
